--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         
         <div id="guess">Guesses left: </div>
         
-        <div id="sofar">Your guesses so far:</div>
+        <div id="sofar">Your guesses so far: <str id="str1"></str></div>
     </div>
 
 </body>
